--- a/Capstone Project Template.ipynb
+++ b/Capstone Project Template.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Title\n",
+    "# Anime Recommendation System Data Pipeline\n",
     "### Data Engineering Capstone Project\n",
     "\n",
     "#### Project Summary\n",
-    "--describe your project at a high level--\n",
+    "The objective of this project was to create an ETL pipeline for an Anime Recommendation System. A use case for this pipeline is to process and use the data to train and update the recommendation algorithm, at fixed intervals.\n",
     "\n",
     "The project follows the follow steps:\n",
     "* Step 1: Scope the Project and Gather Data\n",
@@ -3322,7 +3322,7 @@
    "source": [
     "* Propose how often the data should be updated and why.\n",
     "\n",
-    "> Ideally, the data should be updated daily. Assuming we have a system in place which records the daily user activities (which user is watching which anime), we can schedule using airflow to collect the data and process it using the ETL pipeline. This data can be further used to train & update the recommendation algorithm.\n",
+    "> Ideally, the data should be updated daily. Assuming we have a system in place which records the daily user activities (which user is watching which anime), we can schedule using airflow to collect the data and process it using the data pipeline. This data can be further used to train & update the recommendation algorithm.\n",
     "\n",
     "---"
    ]
