--- a/Capstone Project Template.ipynb
+++ b/Capstone Project Template.ipynb
@@ -113,16 +113,20 @@
     "### Step 1: Scope the Project and Gather Data\n",
     "\n",
     "#### Scope \n",
-    "The project aims at designing the ETL pipeline for processing the data that can later be used for creating an Anime Recommendataion System.\n",
+    "The objective of this project was to create an ETL pipeline for an Anime Recommendation System. A use case for this pipeline is to process and use the data to train and update the recommendation algorithm, at fixed intervals. \n",
+    "\n",
+    "The analytics database can be used by a ML engineer for creating and updating an Anime Recommendation Systems, which in turn can be used to recommend new animes to the users in anime websites such as animepahe.ru, gogoanime.com, etc. The database can also be used for querying questions like which anime is highly rated by the user and which anime is currently watched by most of the users. \n",
     "\n",
     "#### Anime Recommendation Dataset \n",
-    "For this project, we are using a modified version of the dataset from kaggle :[Anime Recommendation Database 2020](https://www.kaggle.com/hernan4444/anime-recommendation-database-2020)\n",
+    "For this project, we are using a modified version of the dataset from kaggle : [Anime Recommendation Database 2020](https://www.kaggle.com/hernan4444/anime-recommendation-database-2020)\n",
+    "\n",
+    "S3 bucket link :  [s3 bucket](https://anime-recommendation-dataset.s3.us-west-2.amazonaws.com/Anime_Recommendation_Dataset/) \n",
     "\n",
     "The dataset is stored in AWS S3. And it consists of 4 csv files :\n",
-    "* anime.csv : Information of anime.\n",
-    "* animelist.csv : List of all animes register by the user with the respective score, watching status and numbers of episodes watched. \n",
-    "* watching_status.csv : Description of every possible status of the column: \"watching_status\" in animelist.csv.\n",
-    "* anime_with_synopsis.csv : CSV with synopsis of anime "
+    "* anime.csv : Information of anime. (Size : 17562 entries)\n",
+    "* animelist.csv : List of all animes register by the user with the respective score, watching status and numbers of episodes watched. (Size : 8000000 entries)\n",
+    "* watching_status.csv : Description of every possible status of the column: \"watching_status\" in animelist.csv. (Size : 5 entries )\n",
+    "* anime_with_synopsis.csv : CSV with synopsis of anime  (Size : 16214 entries)"
    ]
   },
   {
@@ -3111,6 +3115,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> The following data shema is decided upon to store the processed data. It is a star schema with all the tables normalized.\n",
+    "\n",
+    "> Since the tables are normalized, there will be an increase in the query execution time for complex queries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query for retrieving the highest rated anime :\n",
+    "\n",
+    "``` SELECT * FROM anime_master WHERE Score = (SELECT MAX(Score) FROM anime_master); ```\n",
+    "\n",
+    "![highest rated anime](./static/result1.png \"Highest rated anime\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![Table Overview](./static/data_model.png \"Data model\")"
    ]
   },
@@ -3247,6 +3271,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Integrity constraints are enforced, during the database data entry process. If any primary key/ foreign key constraints are violated, it will throw an error in the data entry process."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -3272,6 +3303,23 @@
     "curr.execute(DC_ANIME_WATCHING_STATUS)\n",
     "if curr.rowcount < 1:\n",
     "    print(\"No data found in table anime_watching_status\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "curr.execute(DC_ANIME_SCORE2)\n",
+    "if curr.rowcount > 0:\n",
+    "    print(\"Inconsistent Data found in table anime_score\")\n",
+    "\n",
+    "\n",
+    "curr.execute(DC_ANIME_MASTER2)\n",
+    "if curr.rowcount > 0:\n",
+    "    print(\"Data found in table anime_master with Score < 0 or Score >10\")"
    ]
   },
   {
@@ -3334,13 +3382,30 @@
     "* Write a description of how you would approach the problem differently under the following scenarios:\n",
     " \n",
     " * The data was increased by 100x.\n",
-    " >  Use of Spark to process the data efficiently in a distributed way e.g. with EMR.\n",
+    " >  Use of Spark & Redshift to process the data efficiently in a distributed way e.g. with EMR.\n",
+    "\n",
+    " >  Partitioning of data will also prove effective in such cases. Redshift allows us to achieve the same purpose using sort & distribution key. We can define the columns based on which we want to partition the data, this will help us in making our queries more efficient.\n",
+    "\n",
+    " >  Another factor to consider in this case is the storage. The storage can be tuned by tuning the size of the Redshift cluster. Another option availbale with us is the use AWS s3 storage. \n",
     " \n",
     " * The data populates a dashboard that must be updated on a daily basis by 7am every day.\n",
-    " > Using Airflow and creating a DAG that performs the logic of the described pipeline.\n",
+    " > For this scenerio, I would prefer using Airflow and creating a DAG that performs the logic of the described pipeline.\n",
+    "\n",
+    " > For this, the airflow dag needs to be configured to run daily at 7AM (schedule_interval='0 7 * * *'). This will allow the pipeline to get triggered automatically everyday at the specified time.\n",
+    "\n",
+    " > Moreover airflow comes with both the options to be run on the same instance or on a remote instance from where the pipeline scripts are running.\n",
+    "\n",
+    " > As for the business impact, using airflow will help us to get the updated data daily, without disturbing the other business processes.\n",
     " \n",
     " * The database needed to be accessed by 100+ people.\n",
-    " > Using RedShift to have the data stored in a way that it can efficiently & concurrently be accessed by many people."
+    " > By default,PostgreSQL supports 115 concurrent connections, 15 for superusers and 100 connections for other users. \n",
+    "\n",
+    " > But to be on the safe side, I would opt RedShift. Currently Redshift has a max of 500 connections and 50 concurrency per cluster. If our system expects a even higher influx, we can increase the number of clusters.\n",
+    "\n",
+    " > Amazon Redshift replicates the data within the data warehouse cluster and continuously backs up your data to Amazon S3. \n",
+    " \n",
+    " >  Amazon Redshift Clusters can also be relocated to alternative Availability Zones without any data loss or application changes.\n",
+    "---"
    ]
   },
   {
